Home Section Started

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- Navbar Section -->
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
@@ -22,5 +23,10 @@
             </ul>
         </div>
     </nav>
+
+    <!-- Home Section -->
+    <section class="home" id="home">
+        
+    </section>
 </body>
 </html>
