--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <!-- Navbar Section -->
@@ -21,12 +22,23 @@
                 <li><a href="#">Teams</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i> 
+            </div>
         </div>
     </nav>
 
     <!-- Home Section -->
     <section class="home" id="home">
-        
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, my name is</div>
+                <div class="text-2">Ankush Ladani</div>
+                <div class="text-3">And I'm a <span>Developer</span></div>
+            </div>
+        </div>
     </section>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo culpa minima, laborum dolorem iusto porro ea quam perferendis facilis odio architecto in ipsam vel, provident nemo officiis maiores unde nostrum! Cupiditate repellat tempora, architecto molestiae quo provident omnis? Beatae, sapiente omnis id enim, adipisci quod excepturi porro sint saepe inventore nemo quos deserunt odit impedit dolores delectus dignissimos magnam eius numquam at facere consectetur reiciendis. Assumenda earum aspernatur quaerat eligendi nostrum illo sequi atque repellendus nemo voluptates quisquam dolorum in unde similique modi fugit dolore molestiae id, veritatis dolorem quod? Asperiores eligendi consectetur molestias. Iste ad assumenda voluptate dolor, perspiciatis ducimus porro atque ab esse quo nihil adipisci labore neque optio asperiores numquam ex placeat ut totam harum facere. Magnam, ullam! In aliquid consequuntur odit quos optio atque error est ipsam adipisci repudiandae architecto dolorum modi odio accusantium illo perferendis, laborum itaque cumque ipsum dolore. Doloremque, fugiat laborum eos culpa eveniet dicta neque eum architecto repellat iste natus debitis rerum esse quae similique quibusdam sequi ullam explicabo? Ratione sed sapiente a alias odit dicta nobis corrupti, earum dignissimos totam! Maxime facere qui quo doloribus aut natus obcaecati facilis assumenda fugit eaque molestiae enim atque cum, culpa odio beatae laudantium? Maiores.</p>
+    <script src="script.js"></script>
 </body>
 </html>
